// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Default 1`] = `
Array [
  <h1
    className="title"
  >
    <span>
      Example Title
    </span>
  </h1>,
  <p
    className="description"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </p>,
]
`;

exports[`Storyshots Header With Header Link 1`] = `
Array [
  <h1
    className="title"
  >
    <span>
      <a
        href="#"
      >
        Example Link Title
      </a>
    </span>
  </h1>,
  <p
    className="description"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </p>,
]
`;

exports[`Storyshots LinkGroup Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    className="grid"
    role="list"
  >
    <a
      className="item"
      href="#"
      role="listitem"
      target="_"
    >
      <h3>
        Example 1
         
        <span>
          →
        </span>
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </a>
    <a
      className="item"
      href="#"
      role="listitem"
      target="_"
    >
      <h3>
        Example 2
         
        <span>
          →
        </span>
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </a>
    <a
      className="item"
      href="#"
      role="listitem"
      target="_"
    >
      <h3>
        Example 3
         
        <span>
          →
        </span>
      </h3>
      <p>
        Short Text
      </p>
    </a>
    <a
      className="item"
      href="#"
      role="listitem"
      target="_"
    >
      <h3>
        Example 4
         
        <span>
          →
        </span>
      </h3>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </a>
  </div>
</div>
`;

exports[`Storyshots LinkItem Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <a
    className="item"
    href="#"
    role="listitem"
    target="_"
  >
    <h3>
      Example Link
       
      <span>
        →
      </span>
    </h3>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </a>
</div>
`;
